--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <ul>
 <li>
-<a class="navbar-brand" href="#">
+<a href="javascript:void(0)" class="navbar-brand">
     <img src="hogia-logga.svg" alt="logo" style="width:180px;">
   </a>
   </li>
   <div class="links">
-  <li><a class="active" href="#">START</a></li>
-  <li><a href="#news">JOBBA HOS OSS</a></li>
-  <li><a href="#contact">HÅLLBARHET</a></li>
-  <li><a href="#about">PRAKTIK</a></li>
+  <li><a href="javascript:void(0)" class="active">START</a></li>
+  <li><a href="javascript:void(0)">JOBBA HOS OSS</a></li>
+  <li><a href="javascript:void(0)">HÅLLBARHET</a></li>
+  <li><a href="javascript:void(0)">PRAKTIK</a></li>
   </div>
 </ul>
 
