--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,19 +11,7 @@
 </head>
 <body class="multiple-scenes ">
 
-<ul>
-<li>
-<a href="javascript:void(0)" class="navbar-brand">
-    <img src="hogia-logga.svg" alt="logo" style="width:180px;">
-  </a>
-  </li>
-  <div class="links">
-  <li><a href="javascript:void(0)" class="active">START</a></li>
-  <li><a href="javascript:void(0)">JOBBA HOS OSS</a></li>
-  <li><a href="javascript:void(0)">HÅLLBARHET</a></li>
-  <li><a href="javascript:void(0)">PRAKTIK</a></li>
-  </div>
-</ul>
+
 
 <div id="pano"></div>
 
@@ -69,23 +58,50 @@
 </div>
 
 <div id="titleBar">
-  <h1 class="sceneName"></h1>
+<!--  <h1 class="sceneName"></h1> -->
+<ul>
+<li>
+<a href="javascript:void(0)" class="navbar-brand">
+<img src="hogia-logga.svg" alt="logo" style="width:180px;">
+</a>
+</li>
+<div class="links">
+<li><a href="javascript:void(0)" class="active">START</a></li>
+<li><a href="javascript:void(0)">JOBBA HOS OSS</a></li>
+<li><a href="javascript:void(0)">HÅLLBARHET</a></li>
+<li><a href="javascript:void(0)">PRAKTIK</a></li>
+
 </div>
 
-<a href="javascript:void(0)" id="autorotateToggle">
+<div class="buttons">
+
+
+<li><a href="javascript:void(0)" id="autorotateToggle">
   <img class="icon off" src="img/play.png">
   <img class="icon on" src="img/pause.png">
-</a>
+</a></li>
 
-<a href="javascript:void(0)" id="fullscreenToggle">
+
+<li><a href="javascript:void(0)" id="fullscreenToggle">
   <img class="icon off" src="img/fullscreen.png">
   <img class="icon on" src="img/windowed.png">
 </a>
+</li>
 
-<a href="javascript:void(0)" id="sceneListToggle">
+<li><a href="javascript:void(0)" id="sceneListToggle">
   <img class="icon off" src="img/expand.png">
   <img class="icon on" src="img/collapse.png">
 </a>
+</li>
+
+</div>
+
+</ul>
+</div>
+
+
+
+
 
 <a href="javascript:void(0)" id="viewUp" class="viewControlButton viewControlButton-1">
   <img class="icon" src="img/up.png">
