--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
 <style> @-ms-viewport { width: device-width; } </style>
-<link rel="stylesheet" href="@hogia\bootstrap\HogiaBootstrap\dist\css\hogia-bootstrap.min.css"
+<link rel="stylesheet" href="@hogia\bootstrap\HogiaBootstrap\dist\css\hogia-bootstrap.min.css">
 <link rel="stylesheet" href="vendor/reset.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -15,6 +15,59 @@
 
 
 <div id="pano"></div>
+
+
+<div id="titleBar">
+<!--  <h1 class="sceneName"></h1> -->
+<ul class="nav nav-pills" id="listaflex">
+<li>
+<a class="navbar-brand" id="logga">
+  
+<img src="hogia-logga.svg" alt="logo" style="width:185px;">
+</a>
+</li>
+
+  <li role="presentation"><a href="#">START</a></li>
+  <li role="presentation"><a href="#">KONTAKT</a></li>
+  <li role="presentation"><a href="#">ANSÖK</a></li>
+  <li role="presentation"><a href="#">JOBB</a></li>
+
+
+<div class="buttons">
+<li role="presentation"><a href="javascript:void(0)" id="autorotateToggle">
+  <div class="icon on">
+ <button type="button" class="btn btn-info">Rotera</button>
+  </div>
+  <div class="icon off">
+ <button type="button" class="btn btn-info-secondary">Rotera</button>
+</div>
+</a></li>
+
+
+
+<li role="presentation"><a href="javascript:void(0)" id="sceneListToggle">
+  <div class="icon on">
+    <button type="button" class="btn btn-warning">Scener</button>
+    
+  </div>
+  <div class="icon off">
+    <button type="button" class="btn btn-warning-secondary">Scener</button>
+  </div>
+</a>
+
+</li>
+
+</div>
+
+<li><a href="javascript:void(0)" id="fullscreenToggle">
+  <img class="icon off" src="img/fullscreen.png">
+  <img class="icon on" src="img/windowed.png">
+</a>
+</li>
+</ul>
+</div>
+
+
 
 <div id="sceneList">
   <ul class="scenes">
@@ -57,51 +110,6 @@
 
   </ul>
 </div>
-
-<div id="titleBar">
-<!--  <h1 class="sceneName"></h1> -->
-<ul>
-<li>
-<a href="javascript:void(0)" class="navbar-brand">
-<img src="hogia-logga.svg" alt="logo" style="width:180px;">
-</a>
-</li>
-<div class="links">
-<li><a href="javascript:void(0)" class="active">START</a></li>
-
-<li><a href="javascript:void(0)"><button type="button" class="btn btn-primary">Primary</button></a></li>
-<li><a href="javascript:void(0)">HÅLLBARHET</a></li>
-<li><button type="button" class="btn btn-success">Success</button></li>
-<li><a href="javascript:void(0)">PRAKTIK</a></li>
-
-</div>
-
-<div class="buttons">
-
-
-<li><a href="javascript:void(0)" id="autorotateToggle">
-  <img class="icon off" src="img/play.png">
-  <img class="icon on" src="img/pause.png">
-</a></li>
-
-
-<li><a href="javascript:void(0)" id="fullscreenToggle">
-  <img class="icon off" src="img/fullscreen.png">
-  <img class="icon on" src="img/windowed.png">
-</a>
-</li>
-
-<li><a href="javascript:void(0)" id="sceneListToggle">
-  <img class="icon off" src="img/expand.png">
-  <img class="icon on" src="img/collapse.png">
-</a>
-</li>
-
-</div>
-
-</ul>
-</div>
-
 
 
 
